objects/ssot__MaterialityTopicReference__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Materiality Topic Reference Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SeeAlsoId__c</fullName>
        <label>See Also</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TopicId__c</fullName>
        <label>Topic</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731659053001_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MaterialityTopicReference_SeeAlsoId__rel</label>
        <referenceTo>ssot__MaterialityTopic__dlm</referenceTo>
        <relationshipLabel>MaterialityTopicReference_SeeAlsoId__rel</relationshipLabel>
        <relationshipName>rel_1731659053001_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731659055899_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MaterialityTopicReference_TopicId_ma_rel</label>
        <referenceTo>ssot__MaterialityTopic__dlm</referenceTo>
        <relationshipLabel>MaterialityTopicReference_TopicId_ma_rel</relationshipLabel>
        <relationshipName>rel_1731659055899_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>